--- a/features.html
+++ b/features.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="icon" type="image/x-icon" href="assets/img/illustrations/FacultyReviewpng.png">
-    <title>Features - Brand</title>
+    <title>Features - FacultyReview</title>
     <script>
         (function() {
 
@@ -127,9 +127,9 @@
             <div class="row gy-4 gy-md-0">
                 <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div style="max-width: 350px;">
-                        <h1 class="display-6 fw-bold mb-4">How can we help at&nbsp;<span class="underline">FacultyReview</span>.</h1>
+                        <h1 class="display-6 fw-bold mb-4">How can we help at <span class="underline">FacultyReview</span>.</h1>
                         <p class="my-4">We are Students and so we know from your shoes what a student struggles to choose a right faculty</p>
-                        <p class="mb-4" style="font-size: 1.6rem;">Liked&nbsp;<span class="text-primary bg-warning p-1"><strong>10+</strong></span>&nbsp;Students.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Join Us</a>
+                        <p class="mb-4" style="font-size: 1.6rem;">Liked <span class="text-primary bg-warning p-1"><strong>10+</strong></span> Students.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Join Us</a>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -143,7 +143,7 @@
         <div class="container py-4 py-xl-5">
             <div class="row">
                 <div class="col-md-6 col-xl-6">
-                    <h3 class="display-6 fw-bold pb-md-4">Features that help&nbsp;<span class="underline">students</span></h3>
+                    <h3 class="display-6 fw-bold pb-md-4">Features that help <span class="underline">students</span></h3>
                 </div>
             </div>
             <div class="row gy-4 gy-md-0">
@@ -168,7 +168,7 @@
                                     </svg>
                                     <h5 class="fw-bold mb-0 ms-2">Rate</h5>
                                 </div>
-                                <p class="text-muted my-3">View/Uodate Ratings</p>
+                                <p class="text-muted my-3">View/Update Ratings</p>
                             </div>
                             <div class="col text-center text-md-start">
                                 <div class="d-flex justify-content-center align-items-center justify-content-md-start"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-sun fs-3 text-primary bg-secondary">
