--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>FacultyReview - Home</title>
     <link rel="icon" type="image/x-icon" href="assets/img/illustrations/FacultyReviewpng.png">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHV9D16K69"></script>
@@ -266,67 +266,6 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="container py-4 py-xl-5">
-            <div class="row">
-                <div class="col-md-6 col-xl-6">
-                    <h3 class="display-6 fw-bold pb-md-4">Features that help&nbsp;<span class="underline">students</span></h3>
-                </div>
-            </div>
-            <div class="row gy-4 gy-md-0">
-                <div class="col-md-6 d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
-                    <div>
-                        <div class="row gy-2 row-cols-1 row-cols-sm-2">
-                            <div class="col text-center text-md-start">
-                                <div class="d-flex justify-content-center align-items-center justify-content-md-start"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-sun fs-3 text-primary bg-secondary">
-                                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                        <circle cx="12" cy="12" r="4"></circle>
-                                        <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7"></path>
-                                    </svg>
-                                    <h5 class="fw-bold mb-0 ms-2">View</h5>
-                                </div>
-                                <p class="text-muted my-3">You can view a Faculty Information</p>
-                            </div>
-                            <div class="col text-center text-md-start">
-                                <div class="d-flex justify-content-center align-items-center justify-content-md-start"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-sun fs-3 text-primary bg-secondary">
-                                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                        <circle cx="12" cy="12" r="4"></circle>
-                                        <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7"></path>
-                                    </svg>
-                                    <h5 class="fw-bold mb-0 ms-2">Rate</h5>
-                                </div>
-                                <p class="text-muted my-3">View/Uodate Ratings</p>
-                            </div>
-                            <div class="col text-center text-md-start">
-                                <div class="d-flex justify-content-center align-items-center justify-content-md-start"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-sun fs-3 text-primary bg-secondary">
-                                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                        <circle cx="12" cy="12" r="4"></circle>
-                                        <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7"></path>
-                                    </svg>
-                                    <h5 class="fw-bold mb-0 ms-2">Review</h5>
-                                </div>
-                                <p class="text-muted my-3">Here you can Add your own review</p>
-                            </div>
-                            <div class="col text-center text-md-start">
-                                <div class="d-flex justify-content-center align-items-center justify-content-md-start"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-sun fs-3 text-primary bg-secondary">
-                                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                        <circle cx="12" cy="12" r="4"></circle>
-                                        <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7"></path>
-                                    </svg>
-                                    <h5 class="fw-bold mb-0 ms-2">Contribute</h5>
-                                </div>
-                                <p class="text-muted my-3">Contribute us to help the community grow</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 order-first order-md-last">
-                    <div><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="assets/img/illustrations/teamwork.svg" width="476" height="359"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section></section>
     <section class="py-4 py-xl-5 mb-5">
         <div class="container">
             <div class="row mb-2">
@@ -342,7 +281,7 @@
                             <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-1" aria-expanded="false" aria-controls="accordion-1 .item-1">Who we are?</button></h2>
                             <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-1">
                                 <div class="accordion-body">
-                                    <p>We are too students, working in&nbsp;</p>
+                                    <p>We are too students, working in the welfare of students and helping students to choose faculties and study well</p>
                                 </div>
                             </div>
                         </div>
@@ -407,5 +346,4 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/startup-modern.js"></script>
 </body>
-
 </html>
