--- a/contacts.html
+++ b/contacts.html
@@ -82,7 +82,7 @@
 </script>
 <body>
     <nav class="navbar navbar-light navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="fs-3">FacultyReview</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><img class="rounded img-fluid" src="assets/img/illustrations/FacultyReviewpng.png" width="54" height="40" alt="FacultyReview Icon" style="padding-right: 13px;margin-right: -5px;padding-bottom: 4px;"><a class="navbar-brand d-flex align-items-center" href="/"><span class="fs-3">FacultyReview</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link fs-5" href="index.html">Home</a></li>
