--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="description" content="Faculty Review is a web based app designed to help students in choosing faculties.">
     <title>FacultyReview - Home</title>
     <link rel="icon" type="image/x-icon" href="assets/img/illustrations/FacultyReviewpng.png">
     <!-- Google tag (gtag.js) -->
